# keimo

./: .editorconfig  .gitignore  .prettierignore  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
app/: app.py  globals.css  layout.tsx  middleware.ts  page.module.css  page.tsx
app/api/transcribe/: route.ts
components/: ConversationHistory.tsx  CourseItem.tsx  CourseList.tsx  Ellipsis.tsx  Keimo.tsx  SpeakButton.tsx  SpeechBubble.tsx  TextScroller.tsx  courseDrawer.tsx
lib/: AudioRecorder.tsx
public/animations/: keimo-mouth.json
src/app/: globals.css  layout.tsx  page.tsx  reset.css
store/: keimoStateStore.ts  store.ts
